--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Library</title>
 </head>
 <body>
-    
+    <h1 class="logo">Library</h1>
+    <div class="main-container">
+        
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
