Create code for add button + more styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1 class="logo">Library</h1>
     <div class="main-container">
-        
+        <button class="book-add">Add book</button>
+        <div class="books"></div>
     </div>
 </body>
 <script src="script.js"></script>
