Style further and clean up css

--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <div class="books"></div>
     </div>
     <form id="book-form">
+        <div class="form-title">Add a book</div>
         <div class="form-field">
-            <label for="title">title*:</label>
+            <label for="title">title:</label>
             <input required="" id="title" name="title" type="text">
         </div>
         <div class="form-field">
-            <label for="author">author*:</label>
+            <label for="author">author:</label>
             <input required="" id="author" name="author" type="text">
         </div>
         <div class="form-field">
-            <label for="pages">pages*:</label>
+            <label for="pages">pages:</label>
             <input required="" id="pages" name="pages" type="number">
         </div>
         <div class="form-field">
