--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <form id="book-form">
         <div class="form-title">Add a book</div>
         <div class="form-field">
-            <label for="title">title:</label>
+            <label for="title">Title:</label>
             <input required="" id="title" name="title" type="text">
         </div>
         <div class="form-field">
-            <label for="author">author:</label>
+            <label for="author">Author:</label>
             <input required="" id="author" name="author" type="text">
         </div>
         <div class="form-field">
-            <label for="pages">pages:</label>
+            <label for="pages">Pages:</label>
             <input required="" id="pages" name="pages" type="number">
         </div>
         <div class="form-field">
-            <label for="read">read?</label>
+            <label for="read">Read?</label>
             <input id="read" name="read" type="checkbox">
         </div>
         <button type="submit" id="submit">Add</button>
