Update form validation

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <div class="form-title">Add a book</div>
         <div class="form-field">
             <label for="title">Title:</label>
-            <input required="" id="title" name="title" type="text">
+            <input required="" id="title" name="title" type="text" minlength="1" maxlength="100">
         </div>
         <div class="form-field">
             <label for="author">Author:</label>
-            <input required="" id="author" name="author" type="text">
+            <input required="" id="author" name="author" type="text" minlength="1" maxlength="100">
         </div>
         <div class="form-field">
             <label for="pages">Pages:</label>
-            <input required="" id="pages" name="pages" type="number">
+            <input required="" id="pages" name="pages" type="number" min="1">
         </div>
         <div class="form-field">
             <label for="read">Read?</label>
